--- a/dogger.css
+++ b/dogger.css
@@ -1405,6 +1405,85 @@
   }
 }
 
+.checkup {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.checkup .check-up {
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+.checkup .check-up .checkk {
+  width: 31%;
+  margin: 10px;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+}
+.checkup .check-up .checkk .chk {
+  width: 170px;
+  height: 150px;
+  margin: 15px;
+  background-image: url("./src/dogger_checkup.svg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+.checkup .check-up .checkk #chk2 {
+  background-image: url("./src/dogger_dermatology.svg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+.checkup .check-up .checkk #chk3 {
+  background-image: url("./src/dogger_bones.svg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+.checkup .check-up .checkk #chk4 {
+  background-image: url("./src/dogger_veterinary.svg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+.checkup .check-up .checkk #chk5 {
+  background-image: url("./src/dogger_dryer.svg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+.checkup .check-up .checkk #chk6 {
+  background-image: url("./src/dogger_veterinarian.svg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+.checkup .check-up .checkk #chkk {
+  font-size: 2em;
+  font-weight: 600;
+  margin: 15px;
+}
+.checkup .check-up .checkk #chk {
+  font-size: 1.5em;
+  font-weight: 500;
+  margin: 15px;
+  color: #799290;
+}
+@media (max-width: 1070px) {
+  .checkup .check-up .checkk {
+    width: 45%;
+    font-size: 14px;
+  }
+}
+@media (max-width: 760px) {
+  .checkup .check-up .checkk {
+    width: 90%;
+    font-size: 18px;
+  }
+}
+
 * {
   margin: 0px;
   box-sizing: border-box;
