--- a/dogger.scss
+++ b/dogger.scss
@@ -10,6 +10,7 @@
 @import './_happycustomer.scss';
 @import './_doggerblog.scss';
 @import './_ourservices.scss';
+@import './_contactForm.scss';
 
 * {
     margin: 0px;
