--- a/dogger.css
+++ b/dogger.css
@@ -1862,6 +1862,196 @@
   }
 }
 
+.lastt {
+  width: 100vw;
+  background-color: #333333;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.lastt .last {
+  width: 22.5%;
+  margin: 10px;
+}
+.lastt .last1 {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  align-self: baseline;
+}
+.lastt .last1 .ipsum1 {
+  color: white;
+  align-self: flex-start;
+  font-size: 1.1em;
+  font-weight: 550;
+  margin: 10px;
+}
+.lastt .last1 .ipsum2 {
+  color: #716D67;
+  font-weight: 550;
+  text-align: justify;
+  align-self: flex-start;
+  margin: 10px;
+}
+.lastt .last2 {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  align-self: baseline;
+}
+.lastt .last2 .ql1 {
+  color: white;
+  align-self: flex-start;
+  font-size: 1.1em;
+  font-weight: 550;
+  margin: 10px;
+}
+.lastt .last2 .ql2 {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  font-size: 1.3em;
+  align-self: flex-start;
+}
+.lastt .last2 .ql2 p {
+  margin: 5px;
+  align-self: flex-start;
+}
+.lastt .last2 .ql2 p a {
+  text-decoration: none;
+  color: #716D67;
+}
+.lastt .last2 .ql2 p:hover a {
+  color: white;
+}
+.lastt .last3 {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  align-self: baseline;
+}
+.lastt .last3 .fu1 {
+  color: white;
+  align-self: flex-start;
+  font-size: 1.1em;
+  font-weight: 550;
+  margin: 10px;
+}
+.lastt .last3 .fu2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: flex-start;
+}
+.lastt .last3 .fu2 span {
+  margin: 10px;
+  font-size: 1.2em;
+  color: #716D67;
+}
+.lastt .last3 .fu2 span:hover {
+  color: white;
+  cursor: pointer;
+}
+.lastt .last3 .fu3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: flex-start;
+  margin-left: 20px;
+}
+.lastt .last3 .fu3 span {
+  margin: 10px;
+  font-size: 1.3em;
+  font-weight: 550;
+  color: #716D67;
+}
+.lastt .last3 .fu3 span:hover {
+  color: white;
+  cursor: pointer;
+}
+.lastt .last4 {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  align-self: baseline;
+}
+.lastt .last4 .sn1 {
+  color: white;
+  align-self: flex-start;
+  font-size: 1.1em;
+  font-weight: 550;
+  margin: 10px;
+}
+.lastt .last4 .sn2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+  align-self: flex-start;
+}
+.lastt .last4 .sn2 .div1 {
+  border: 2px solid white;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+.lastt .last4 .sn2 .div1 input {
+  width: 130px;
+  border: none;
+  height: 40px;
+  outline: none;
+  border-radius: 10px;
+  background: transparent;
+}
+.lastt .last4 .sn2 .div2 {
+  border: 2px solid white;
+  padding: 6.8px 14px;
+  background-color: aliceblue;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+@media (max-width: 768px) {
+  .lastt {
+    flex-direction: column;
+  }
+  .lastt .last {
+    width: 80%;
+  }
+}
+.lastline {
+  width: 100vw;
+  background-color: #333333;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.lastline .lline {
+  width: 70%;
+  border-top: 2px solid white;
+  font-size: 0.8em;
+  font-weight: 520;
+  color: #716D67;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  text-align: center;
+}
+.lastline .lline span {
+  color: red;
+  padding: 5px;
+}
+@media (max-width: 850px) {
+  .lastline .lline {
+    font-size: 0.6em;
+  }
+}
+
 * {
   margin: 0px;
   box-sizing: border-box;
