--- a/dogger.scss
+++ b/dogger.scss
@@ -11,6 +11,7 @@
 @import './_doggerblog.scss';
 @import './_ourservices.scss';
 @import './_contactForm.scss';
+@import'./_lastpage.scss';
 
 * {
     margin: 0px;
