--- a/_lastpage.scss
+++ b/_lastpage.scss
@@ -3,200 +3,210 @@
     background-color: #333333;
     // height: 200px;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
 
-
-
-    .last {
-        width: calc(90%/4);
-        // height: 400px;
+    .darkkkk {
+        width: 80%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
         // border: 2px solid white;
-        margin: 10px;
-    }
-
-    .last1 {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-        align-self: baseline;
 
 
-        .ipsum1 {
-            color: white;
-            align-self: flex-start;
-            font-size: 1.1em;
-            font-weight: 550;
+        .last {
+            width: calc(90%/4);
+            // height: 400px;
+            // border: 2px solid white;
             margin: 10px;
         }
 
-        .ipsum2 {
-            color: #716D67;
-            font-weight: 550;
-            text-align: justify;
-            align-self: flex-start;
-            margin: 10px;
-        }
-    }
-
-
-    .last2 {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-        align-self: baseline;
-
-        .ql1 {
-            color: white;
-            align-self: flex-start;
-            font-size: 1.1em;
-            font-weight: 550;
-            margin: 10px;
-        }
-
-        .ql2 {
+        .last1 {
             display: flex;
             justify-content: center;
             flex-direction: column;
             align-items: center;
-            font-size: 1.3em;
-            align-self: flex-start;
+            align-self: baseline;
 
-            p {
-                margin: 5px;
+
+            .ipsum1 {
+                color: white;
+                align-self: flex-start;
+                font-size: 1.1em;
+                font-weight: 550;
+                margin: 10px;
+            }
+
+            .ipsum2 {
+                color: #716D67;
+                font-weight: 550;
+                text-align: justify;
+                align-self: flex-start;
+                margin: 10px;
+            }
+        }
+
+
+        .last2 {
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+            align-self: baseline;
+
+            .ql1 {
+                color: white;
+                align-self: flex-start;
+                font-size: 1.1em;
+                font-weight: 550;
+                margin: 10px;
+            }
+
+            .ql2 {
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                align-items: center;
+                font-size: 1.3em;
                 align-self: flex-start;
 
+                p {
+                    margin: 5px;
+                    align-self: flex-start;
 
-                a {
-                    text-decoration: none;
-                    color: #716D67;
-                }
 
-                &:hover {
                     a {
-                        color: white;
+                        text-decoration: none;
+                        color: #716D67;
+                    }
+
+                    &:hover {
+                        a {
+                            color: white;
+                        }
                     }
                 }
             }
         }
-    }
 
-    .last3 {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-        align-self: baseline;
-
-        .fu1 {
-            color: white;
-            align-self: flex-start;
-            font-size: 1.1em;
-            font-weight: 550;
-            margin: 10px;
-        }
-
-        .fu2 {
+        .last3 {
             display: flex;
             justify-content: center;
-            // flex-direction: column;
+            flex-direction: column;
             align-items: center;
-            align-self: flex-start;
+            align-self: baseline;
 
-            span {
-                margin: 10px;
-                font-size: 1.2em;
-                color: #716D67;
-
-                &:hover {
-                    color: white;
-                    cursor: pointer;
-                }
-
-            }
-
-        }
-
-        .fu3 {
-            display: flex;
-            justify-content: center;
-
-            align-items: center;
-            align-self: flex-start;
-            margin-left: 20px;
-
-            span {
-                margin: 10px;
-                font-size: 1.3em;
+            .fu1 {
+                color: white;
+                align-self: flex-start;
+                font-size: 1.1em;
                 font-weight: 550;
-                color: #716D67;
+                margin: 10px;
+            }
 
-                &:hover {
-                    color: white;
-                    cursor: pointer;
+            .fu2 {
+                display: flex;
+                justify-content: center;
+                // flex-direction: column;
+                align-items: center;
+                align-self: flex-start;
+
+                span {
+                    margin: 10px;
+                    font-size: 1.2em;
+                    color: #716D67;
+
+                    &:hover {
+                        color: white;
+                        cursor: pointer;
+                    }
+
+                }
+
+            }
+
+            .fu3 {
+                display: flex;
+                justify-content: center;
+
+                align-items: center;
+                align-self: flex-start;
+                margin-left: 20px;
+
+                span {
+                    margin: 10px;
+                    font-size: 1.3em;
+                    font-weight: 550;
+                    color: #716D67;
+
+                    &:hover {
+                        color: white;
+                        cursor: pointer;
+                    }
+
                 }
 
             }
 
         }
 
-    }
 
 
+        .last4 {
 
-    .last4 {
-
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-        align-self: baseline;
-
-        .sn1 {
-
-            color: white;
-            align-self: flex-start;
-            font-size: 1.1em;
-            font-weight: 550;
-            margin: 10px;
-        }
-
-        .sn2 {
             display: flex;
             justify-content: center;
+            flex-direction: column;
             align-items: center;
-            margin: 10px;
-            align-self: flex-start;
+            align-self: baseline;
 
-            .div1 {
-                border: 2px solid white;
-                border-top-left-radius: 10px;
-                border-bottom-left-radius: 10px;
+            .sn1 {
 
-                input {
-                    width: 130px;
-                    border: none;
-                    height: 40px;
-                    outline: none;
-                    border-radius: 10px;
-                    background: transparent;
+                color: white;
+                align-self: flex-start;
+                font-size: 1.1em;
+                font-weight: 550;
+                margin: 10px;
+            }
+
+            .sn2 {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin: 10px;
+                align-self: flex-start;
+
+                .div1 {
+                    border: 2px solid white;
+                    border-top-left-radius: 10px;
+                    border-bottom-left-radius: 10px;
+
+                    input {
+                        width: 130px;
+                        border: none;
+                        height: 40px;
+                        outline: none;
+                        border-radius: 10px;
+                        background: transparent;
+                    }
+                }
+
+                .div2 {
+                    border: 2px solid white;
+                    padding: 6.8px 14px;
+                    // border-radius: 10px;
+                    background-color: aliceblue;
+                    border-top-right-radius: 10px;
+                    border-bottom-right-radius: 10px;
                 }
             }
 
-            .div2 {
-                border: 2px solid white;
-                padding: 6.8px 14px;
-                // border-radius: 10px;
-                background-color: aliceblue;
-                border-top-right-radius: 10px;
-                border-bottom-right-radius: 10px;
-            }
+
         }
 
 
     }
+
 
 }
 
@@ -213,7 +223,7 @@
 .lastline {
     width: 100vw;
     background-color: #333333;
-
+    height: 500px;
     display: flex;
     align-items: center;
     justify-content: center;
