--- a/_navbar.scss
+++ b/_navbar.scss
@@ -4,9 +4,9 @@
     position: fixed;
     justify-content: space-around;
     font-size: 30px;
-    background-color: rgb(241, 230, 230);
-    border-bottom: 2px solid black;
-    box-shadow: 2px 1px 5px 2px black;
+    background-color: transparent;
+    // border-bottom: 2px solid black;
+    // box-shadow: 2px 1px 5px 2px black;
     z-index: 5;
 
     .dogger {
@@ -109,6 +109,12 @@
             }
         }
     }
+}
+
+.select {
+    background-color: white;
+    border-bottom: 2px solid gray;
+    box-shadow: 2px 1px 5px 2px black;
 }
 
 
