--- a/_contactForm.scss
+++ b/_contactForm.scss
@@ -20,338 +20,231 @@
 
         .leftForm {
             width: 48%;
-            // height: 600px;
+            // height: 780px;
             // border: 2px solid black;
             margin: 10px;
             display: flex;
+            flex-direction: column;
             align-items: center;
-            justify-content: center;
+            justify-content: space-evenly;
             font-size: 16px;
             background-color: #A2C0BE;
 
-            .contt {
-                font-size: 1.5em;
-                width: 90%;
-                // height: 98%;
+            .contt1 {
+                margin: 13px 0;
+                width: 95%;
+                // height: 16%;
                 // border: 2px solid black;
+            }
+
+            .fistform {
                 display: flex;
                 align-items: center;
+                justify-content: flex-start;
+                font-size: 2em;
+                color: #405A58;
+                padding: 15px 20px;
+                font-weight: 520;
+                // height: 0;
+            }
+
+            .secform {
+                display: flex;
+                align-items: center;
+                justify-content: space-around;
+
+                .secform-left {
+                    width: 47%;
+                    // border: 2px solid black;
+                    display: flex;
+                    align-items: flex-start;
+                    justify-content: space-around;
+                    flex-direction: column;
+
+                    p {
+                        margin: 10px 20px;
+                        font-size: 1.3em;
+                        font-weight: 520;
+                        color: #405A58;
+                    }
+
+                    #firstname {
+                        width: 85%;
+                        margin: 10px 20px;
+                        height: 50px;
+                        border: none;
+                        border-radius: 10px;
+                        outline-color: blue;
+                    }
+                }
+
+                .secform-right {
+                    width: 47%;
+                    // border: 2px solid black;
+                    display: flex;
+                    align-items: flex-start;
+                    justify-content: space-around;
+                    flex-direction: column;
+
+                    p {
+                        margin: 10px 20px;
+                        font-size: 1.3em;
+                        font-weight: 520;
+                        color: #405A58;
+                    }
+
+                    #lastname {
+                        width: 85%;
+                        margin: 10px 20px;
+                        height: 50px;
+                        border: none;
+                        border-radius: 10px;
+                        outline-color: blue;
+                    }
+                }
+
+
+
+            }
+
+            .thirdform {
+                display: flex;
                 justify-content: center;
-                flex-direction: column;
+                align-items: center;
+                // border: 2px solid red;
 
-                .contactt {
-                    width: 100%;
-                    // height: 20%;
+                .ttff {
+                    width: 95%;
                     // border: 2px solid black;
                     display: flex;
-                    align-items: center;
-                    justify-content: flex-start;
-                    padding: 5px;
-                    color: #797058;
-                    margin: 5px;
-                }
-
-                .contt1 {
-                    font-size: 1.3em;
-                    font-weight: 550;
-                    color: #3a3935;
-                }
-
-                .contt2 {
-                    display: flex;
-                    align-items: center;
-                    justify-content: space-between;
-
-                    .first-name {
-                        width: 45%;
-                        // border: 2px solid black;
-                        display: flex;
-                        justify-content: center;
-                        align-items: flex-start;
-                        flex-direction: column;
-                        margin: 5px;
-
-                        input {
-                            width: 180px;
-                            height: 40px;
-                            margin: 5px;
-                            border-radius: 10px;
-                            border: none;
-                            outline: none;
-                        }
-
-                        @media(max-width: 1285px) {
-                            input {
-                                width: 180px;
-                            }
-                        }
-
-                        @media(max-width:1240px) {
-                            input {
-                                width: 250px;
-                            }
-                        }
-
-                        @media(max-width: 1111px) {
-                            input {
-                                width: 240px;
-                            }
-                        }
-
-                        @media(max-width: 1010px) {
-                            input {
-                                width: 200px;
-                            }
-                        }
-
-                        @media(max-width: 836px) {
-                            input {
-                                width: 150px;
-                            }
-                        }
-                    }
-
-                    @media(max-width: 1285px) {
-                        .first-name {
-                            width: 44%;
-                        }
-                    }
-
-                    .last-name {
-                        width: 45%;
-                        // border: 2px solid black;
-                        margin: 5px;
-                        display: flex;
-                        justify-content: center;
-                        align-items: flex-start;
-                        flex-direction: column;
-
-                        input {
-                            margin: 5px;
-                            width: 180px;
-                            height: 40px;
-                            border-radius: 10px;
-                            border: none;
-                            outline: none;
-                        }
-
-                        @media(max-width: 1285px) {
-                            input {
-                                width: 180px;
-                            }
-                        }
-
-                        @media(max-width:1240px) {
-                            input {
-                                width: 250px;
-                            }
-                        }
-
-                        @media(max-width: 1111px) {
-                            input {
-                                width: 240px;
-                            }
-                        }
-
-                        @media(max-width: 1010px) {
-                            input {
-                                width: 200px;
-                            }
-                        }
-
-                        @media(max-width: 836px) {
-                            input {
-                                width: 150px;
-                            }
-                        }
-
-
-                    }
-
-                    @media(max-width: 1285px) {
-                        .last-name {
-                            width: 44%;
-                            // margin-right: 25px;
-                        }
-                    }
-                }
-
-                @media(max-width:1111px) {
-                    .contt2 {
-                        justify-content: space-evenly;
-                    }
-                }
-
-                .contt3 {
-                    display: flex;
                     justify-content: center;
                     align-items: flex-start;
                     flex-direction: column;
-                    margin: 5px;
 
+                    p {
+                        margin: 10px 20px;
+                        font-size: 1.3em;
+                        font-weight: 520;
+                        color: #405A58;
+                    }
 
-
-                    input {
-                        margin: 5px;
-                        width: 430px;
-                        border-radius: 6px;
-                        height: 40px;
+                    #email {
+                        width: 95%;
+                        height: 50px;
+                        margin: 10px 15px;
                         border: none;
-                        outline: none;
-                    }
-
-                    @media(max-width:1240px) {
-                        input {
-                            width: 630px;
-                        }
-                    }
-
-                    @media(max-width: 1111px) {
-                        input {
-                            width: 570px;
-                        }
-                    }
-
-                    @media(max-width: 1010px) {
-                        input {
-                            width: 470px;
-                        }
-                    }
-
-                    @media(max-width: 836px) {
-                        input {
-                            width: 370px;
-                        }
+                        border-radius: 8px;
+                        outline-color: blue;
                     }
                 }
+            }
 
-                .contt4 {
-                    display: flex;
-                    justify-content: center;
-                    align-items: flex-start;
-                    flex-direction: column;
-                    margin: 5px;
 
-                    input {
-                        margin: 5px;
-                        width: 430px;
-                        border-radius: 6px;
-                        height: 40px;
-                        border: none;
-                        outline: none;
-                    }
+            .fourthform {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                // border: 2px solid red;
 
-                    @media(max-width:1240px) {
-                        input {
-                            width: 630px;
-                        }
-                    }
-
-                    @media(max-width: 1111px) {
-                        input {
-                            width: 570px;
-                        }
-                    }
-
-                    @media(max-width: 1010px) {
-                        input {
-                            width: 470px;
-                        }
-                    }
-
-                    @media(max-width: 836px) {
-                        input {
-                            width: 370px;
-                        }
-                    }
-                }
-
-                .contt5 {
-                    display: flex;
-                    justify-content: center;
-                    align-items: flex-start;
-                    flex-direction: column;
-                    margin: 5px;
-
-                    input {
-                        margin: 5px;
-                        width: 430px;
-                        border-radius: 6px;
-                        height: 260px;
-                        border: none;
-                        outline: none;
-
-                    }
-
-                    @media(max-width:1240px) {
-                        input {
-                            width: 630px;
-                        }
-                    }
-
-                    @media(max-width: 1111px) {
-                        input {
-                            width: 570px;
-                        }
-                    }
-
-                    @media(max-width: 1010px) {
-                        input {
-                            width: 470px;
-                        }
-                    }
-
-                    @media(max-width: 836px) {
-                        input {
-                            width: 370px;
-                        }
-                    }
-                }
-
-                .contt6 {
-                    display: flex;
-                    justify-content: flex-start;
-                    align-items: flex-start;
-
-                    margin: 10px 5px;
+                .forformbor {
+                    width: 95%;
                     // border: 2px solid black;
-
-                    .send {
-                        padding: 10px 20px;
-                        background-color: #343A40;
-                        // border: 2px solid #343A40;
-                        border-radius: 20px;
-                        font-size: 0.7em;
-                        color: white;
-
-                        &:hover {
-                            background-color: #0e0e0f;
-                        }
-                    }
-
-                }
-
-
-                .contt3,
-                .contt4,
-                .contt5 {
+                    display: flex;
+                    justify-content: center;
                     align-items: flex-start;
                     flex-direction: column;
+
+                    p {
+                        margin: 10px 20px;
+                        font-size: 1.3em;
+                        font-weight: 520;
+                        color: #405A58;
+                    }
+
+                    #subject {
+                        width: 95%;
+                        height: 50px;
+                        margin: 10px 15px;
+                        border: none;
+                        border-radius: 8px;
+                        outline-color: blue;
+                    }
                 }
-
-
             }
 
-            @media(max-width: 1250px) {
-                .contt {
-                    width: 100%;
+
+            .fivethform {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                // border: 2px solid red;
+
+                .fiveforbor {
+                    width: 95%;
+                    // border: 2px solid black;
+                    display: flex;
+                    justify-content: center;
+                    align-items: flex-start;
+                    flex-direction: column;
+
+                    p {
+                        margin: 10px 20px;
+                        font-size: 1.3em;
+                        font-weight: 520;
+                        color: #405A58;
+                    }
+
+                    #txtarea {
+                        width: 95%;
+                        height: 50px;
+                        margin: 10px 15px;
+                        border: none;
+                        border-radius: 8px;
+                        outline-color: blue;
+                    }
                 }
             }
+
+            .sixthform {
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+
+                .send-ms-bor {
+                    width: 35%;
+                    height: 50px;
+                    // border: 2px solid black;
+                    display: flex;
+                    margin: 15px;
+                    color: white;
+                    background-color: #343A40;
+                    font-size: 1.2em;
+                    padding: 10px;
+                    font-weight: 530;
+                    justify-content: center;
+                    align-items: center;
+                    border-radius: 30px;
+
+                    &:hover {
+                        background-color: #121313;
+                        cursor: pointer;
+                    }
+
+                    @media(max-width:820px) {
+                        font-size: 0.8em;
+                        width: 50%;
+                    }
+                }
+            }
+
+
+
         }
 
-        @media(max-width:1240px) {
+        @media(max-width:1274px) {
             .leftForm {
                 width: 75%;
+                // border: 4px solid red;
             }
 
         }
@@ -472,7 +365,7 @@
         }
 
 
-        @media(max-width:1240px) {
+        @media(max-width:1274px) {
             .rightForm {
                 width: 75%;
             }
