--- a/dogger.scss
+++ b/dogger.scss
@@ -27,6 +27,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    // border: 2px solid black;
 
     .well {
         display: flex;
