--- a/_contactForm.scss
+++ b/_contactForm.scss
@@ -195,6 +195,7 @@
                     }
 
                     #txtarea {
+                        resize: vertical;
                         width: 95%;
                         height: 50px;
                         margin: 10px 15px;
