--- a/dogger.css
+++ b/dogger.css
@@ -35,6 +35,7 @@
 }
 .nav-bar .home .hh:hover {
   color: #799290;
+  cursor: pointer;
 }
 .nav-bar .home #on {
   display: none;
@@ -43,32 +44,57 @@
   display: block;
 }
 .nav-bar .home .about .trade {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   position: absolute;
   top: 70px;
   width: 200px;
+  border-bottom: 2px solid rgb(109, 99, 99);
+  background-color: white;
   display: none;
 }
 .nav-bar .home .about .trade:hover {
   color: black;
 }
-.nav-bar .home .about .trade ul {
-  margin: 0;
-  font-size: 30px;
+.nav-bar .home .about .trade div:first-child {
+  border-top: 3px solid red;
+}
+.nav-bar .home .about .trade #moredis:hover + .div-rig-bor {
+  display: block;
+}
+.nav-bar .home .about .trade div {
+  width: 100%;
+  font-size: 20px;
   line-height: 40px;
   font-weight: 550;
   list-style: none;
-  background-color: rgba(243, 235, 235, 0.954);
-  height: 300px;
-  border-top: 2px solid grey;
-  box-shadow: 2px 1px 5px 2px black;
-}
-.nav-bar .home .about .trade ul li {
+  background-color: white;
   text-align: center;
   cursor: pointer;
 }
-.nav-bar .home .about .trade ul li:hover {
-  background-color: rgb(210, 185, 185);
+.nav-bar .home .about .trade div:hover {
+  background-color: rgb(231, 211, 211);
   color: black;
+}
+.nav-bar .home .about .trade .div-rig-bor {
+  border: 2px solid rgb(213, 193, 193);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  right: -195px;
+  top: 250px;
+}
+.nav-bar .home .about .trade .div-rig-bor p {
+  font-size: 1.1em;
+  width: 100%;
+}
+.nav-bar .home .about .trade .div-rig-bor p:hover {
+  background-color: black;
+  color: white;
 }
 @media (max-width: 1000px) {
   .nav-bar .home {
@@ -79,6 +105,9 @@
   margin-right: 50px;
   display: none;
   margin: 40px;
+}
+.nav-bar #menu:hover {
+  cursor: pointer;
 }
 @media (max-width: 1000px) {
   .nav-bar #menu {
@@ -135,6 +164,7 @@
   flex-direction: column;
 }
 #navigation #navcontent p {
+  width: 100%;
   margin: 20px 0;
   padding: 10px 80px;
   padding-left: 0px;
@@ -143,11 +173,14 @@
 }
 #navigation #navcontent p:hover {
   background-color: rgb(228, 204, 204);
-}
-#navigation #navcontent p:nth-child(2) {
-  display: flex;
+  cursor: pointer;
 }
 
+@media (min-width: 990px) {
+  #navigation {
+    display: none;
+  }
+}
 .border {
   width: 100vw;
   height: 100vh;
@@ -1643,6 +1676,7 @@
   color: #405A58;
 }
 .contactform #form .leftForm .fivethform .fiveforbor #txtarea {
+  resize: vertical;
   width: 95%;
   height: 50px;
   margin: 10px 15px;
