--- a/_photos.scss
+++ b/_photos.scss
@@ -6,6 +6,40 @@
     align-items: center;
     justify-content: center;
 
+
+    .big-box {
+        position: absolute;
+        width: 0;
+        transition: 1.2s;
+        height: 100%;
+        border: 2px solid black;
+        background-color: rgba(0, 0, 0, 0.573);
+        // z-index: 99999;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        visibility: hidden;
+
+        .closeee {
+            position: absolute;
+            top: 40px;
+            padding: 10px 18px;
+            right: 50px;
+            background-color: rgba(137, 43, 226, 0.429);
+            // line-height: 40px;
+            cursor: pointer;
+            border: 2px solid rgba(0, 0, 0, 0.253);
+            border-radius: 50%;
+
+            &:hover {
+                background-color: rgba(137, 43, 226, 0.824);
+                font-weight: 550;
+            }
+        }
+
+
+    }
+
     .gallery {
         display: flex;
         flex-wrap: wrap;
@@ -21,12 +55,18 @@
             // border: 2px solid black;
             transition: 1s;
 
+
+
+
             &:hover {
                 cursor: zoom-in;
                 transform: scaleX(1.3) scaleY(1.2);
                 // box-shadow: 4px 4px 4px 4px black, -4px -4px 4px 4px black, 4px -4px 4px 4px black;
             }
         }
+
+
+
 
         @media(max-width:1050px) {
             .photos {
@@ -44,57 +84,56 @@
 
 
 
-        .photos:nth-child(1),
-        .photos:nth-child(7) {
 
-            background-image: url('./src/dogger_img_sm_1.jpg.webp');
-            background-size: 100%;
-            background-position: center;
-            background-repeat: no-repeat;
-        }
 
-        .photos:nth-child(2),
-        .photos:nth-child(8) {
-            background-image: url('./src/dogger_img_sm_2.jpg.webp');
-            background-size: 100%;
-            background-position: center;
-            background-repeat: no-repeat;
-        }
 
-        .photos:nth-child(3),
-        .photos:nth-child(9) {
-            background-image: url('./src/dogger_img_sm_3.jpg.webp');
-            background-size: 100%;
-            background-position: center;
-            background-repeat: no-repeat;
-        }
-
-        .photos:nth-child(4),
-        .photos:nth-child(10) {
-            background-image: url('./src/dogger_img_sm_4.jpg.webp');
-            background-size: 100%;
-            background-position: center;
-            background-repeat: no-repeat;
-        }
-
-        .photos:nth-child(5),
-        .photos:nth-child(11) {
-            background-image: url('./src/dogger_img_sm_5.jpg.webp');
-            background-size: 100%;
-            background-position: center;
-            background-repeat: no-repeat;
-        }
-
-        .photos:nth-child(6),
-        .photos:nth-child(12) {
-            background-image: url('./src/dogger_img_sm_6.jpg.webp');
-            background-size: 100%;
-            background-position: center;
-            background-repeat: no-repeat;
-        }
     }
 
     @media(max-width:1050px) {
         width: 100%;
     }
+}
+
+
+#p1 {
+
+    background-image: url('./src/dogger_img_sm_1.jpg.webp');
+    background-size: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+#p2 {
+    background-image: url('./src/dogger_img_sm_2.jpg.webp');
+    background-size: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+#p3 {
+    background-image: url('./src/dogger_img_sm_3.jpg.webp');
+    background-size: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+#p4 {
+    background-image: url('./src/dogger_img_sm_4.jpg.webp');
+    background-size: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+#p5 {
+    background-image: url('./src/dogger_img_sm_5.jpg.webp');
+    background-size: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+#p6 {
+    background-image: url('./src/dogger_img_sm_6.jpg.webp');
+    background-size: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
 }
