--- a/dogger.css
+++ b/dogger.css
@@ -791,6 +791,32 @@
   align-items: center;
   justify-content: center;
 }
+.photo .big-box {
+  position: absolute;
+  width: 0;
+  transition: 1.2s;
+  height: 100%;
+  border: 2px solid black;
+  background-color: rgba(0, 0, 0, 0.573);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+}
+.photo .big-box .closeee {
+  position: absolute;
+  top: 40px;
+  padding: 10px 18px;
+  right: 50px;
+  background-color: rgba(137, 43, 226, 0.429);
+  cursor: pointer;
+  border: 2px solid rgba(0, 0, 0, 0.253);
+  border-radius: 50%;
+}
+.photo .big-box .closeee:hover {
+  background-color: rgba(137, 43, 226, 0.824);
+  font-weight: 550;
+}
 .photo .gallery {
   display: flex;
   flex-wrap: wrap;
@@ -820,52 +846,52 @@
     height: 250px;
   }
 }
-.photo .gallery .photos:nth-child(1),
-.photo .gallery .photos:nth-child(7) {
+@media (max-width: 1050px) {
+  .photo {
+    width: 100%;
+  }
+}
+
+#p1 {
   background-image: url("./src/dogger_img_sm_1.jpg.webp");
   background-size: 100%;
   background-position: center;
   background-repeat: no-repeat;
 }
-.photo .gallery .photos:nth-child(2),
-.photo .gallery .photos:nth-child(8) {
+
+#p2 {
   background-image: url("./src/dogger_img_sm_2.jpg.webp");
   background-size: 100%;
   background-position: center;
   background-repeat: no-repeat;
 }
-.photo .gallery .photos:nth-child(3),
-.photo .gallery .photos:nth-child(9) {
+
+#p3 {
   background-image: url("./src/dogger_img_sm_3.jpg.webp");
   background-size: 100%;
   background-position: center;
   background-repeat: no-repeat;
 }
-.photo .gallery .photos:nth-child(4),
-.photo .gallery .photos:nth-child(10) {
+
+#p4 {
   background-image: url("./src/dogger_img_sm_4.jpg.webp");
   background-size: 100%;
   background-position: center;
   background-repeat: no-repeat;
 }
-.photo .gallery .photos:nth-child(5),
-.photo .gallery .photos:nth-child(11) {
+
+#p5 {
   background-image: url("./src/dogger_img_sm_5.jpg.webp");
   background-size: 100%;
   background-position: center;
   background-repeat: no-repeat;
 }
-.photo .gallery .photos:nth-child(6),
-.photo .gallery .photos:nth-child(12) {
+
+#p6 {
   background-image: url("./src/dogger_img_sm_6.jpg.webp");
   background-size: 100%;
   background-position: center;
   background-repeat: no-repeat;
-}
-@media (max-width: 1050px) {
-  .photo {
-    width: 100%;
-  }
 }
 
 .should {
