--- a/_photos.scss
+++ b/_photos.scss
@@ -150,7 +150,7 @@
 }
 
 
-#p1 {
+#p1two {
 
     background-image: url('./src/dogger_img_sm_1.jpg.webp');
     background-size: cover;
@@ -158,7 +158,7 @@
     background-repeat: no-repeat;
 }
 
-#p2 {
+#p2one {
     background-image: url('./src/dogger_img_sm_2.jpg.webp');
     background-size: cover;
     background-position: center;
